--- a/programs/token_synchronize/Cargo.toml
+++ b/programs/token_synchronize/Cargo.toml
@@ -10,6 +10,7 @@ anchor-lang = "0.31.1"
 anchor-spl = "0.31.1"
 # arrayref = "0.3.9"
 # num_enum = "0.7.4"
+spl-token-2022 = "6.0.0"
 
 [features]
 idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
